--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,6 +122,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -150,9 +151,6 @@ allow 130.193.15.79;
 allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.180.160.15;
-allow 139.59.177.238;
-allow 139.84.236.115;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.164.38.67;
@@ -169,7 +167,6 @@ allow 144.172.118.73;
 allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
-allow 147.182.202.137;
 allow 147.45.116.145;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -178,6 +175,7 @@ allow 149.56.44.47;
 allow 152.32.199.79;
 allow 152.53.133.14;
 allow 152.53.53.243;
+allow 153.216.169.81;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
@@ -189,14 +187,9 @@ allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
 allow 157.180.42.50;
-allow 157.230.17.193;
 allow 158.220.123.219;
-allow 158.247.192.179;
 allow 158.69.252.116;
-allow 159.203.7.160;
-allow 159.223.170.101;
 allow 160.119.249.240;
-allow 161.35.148.205;
 allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -214,10 +207,8 @@ allow 162.247.74.7;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
-allow 165.227.41.75;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 170.64.203.139;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -231,7 +222,6 @@ allow 172.104.142.74;
 allow 172.104.182.84;
 allow 172.104.186.73;
 allow 172.104.243.155;
-allow 172.105.161.162;
 allow 172.105.174.195;
 allow 172.232.141.150;
 allow 172.233.82.41;
@@ -251,7 +241,6 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
-allow 176.58.124.159;
 allow 176.65.134.61;
 allow 176.65.143.138;
 allow 176.65.144.142;
@@ -590,7 +579,6 @@ allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
 allow 188.165.200.97;
-allow 188.166.181.235;
 allow 188.214.104.21;
 allow 188.239.191.25;
 allow 188.68.36.28;
@@ -690,6 +678,7 @@ allow 193.218.118.72;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
+allow 193.26.115.161;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
@@ -700,13 +689,11 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.130.99;
 allow 194.163.157.49;
-allow 194.26.192.249;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.26.247.64;
 allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
@@ -977,8 +964,6 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
-allow 207.148.70.72;
-allow 208.85.16.102;
 allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -999,7 +984,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.54.78;
-allow 216.238.111.124;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1040,7 +1024,6 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.13;
@@ -1310,6 +1293,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
+allow 2a01:f500:f500:e::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
@@ -1318,7 +1302,6 @@ allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
-allow 2a02:c204:2250:8128::1;
 allow 2a02:c206:2240:3516::1;
 allow 2a02:c206:2240:5051::1;
 allow 2a02:c206:2240:5054::1;
@@ -1621,10 +1604,8 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:2787:1b:d19::a;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1639,6 +1620,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1749,6 +1731,7 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
+allow 2a12:a800:9:1:193:26:115:161;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1772,14 +1755,12 @@ allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.183.87;
 allow 45.11.59.28;
-allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1852,7 +1833,6 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
-allow 45.87.43.93;
 allow 45.9.148.50;
 allow 45.9.168.108;
 allow 45.9.168.113;
@@ -1929,12 +1909,9 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.164.66;
-allow 60.39.117.185;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
-allow 64.176.169.123;
-allow 64.176.39.158;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
@@ -1944,7 +1921,6 @@ allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
-allow 70.34.249.72;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.211.49.235;
@@ -2045,7 +2021,6 @@ allow 94.16.121.91;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
-allow 94.72.97.220;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
@@ -2054,6 +2029,5 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
-allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
