--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -420,6 +420,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -669,6 +670,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -683,6 +685,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -744,6 +747,7 @@ deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
